# harbor-ssh-client

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
design_preview/design_handoff_harbor_ssh_client/: Harbor SSH Client.dc.html  README.md
docs/: architecture.md  configuration.md  faq.md  index.md  installation.md  user-guide.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: connect.rs  disconnect.rs  docker.rs  downloads.rs  fs.rs  local_fs.rs  mod.rs  ping.rs  port_forward.rs  profiles.rs  session_log.rs  ssh_config.rs  status.rs  terminal.rs
src-tauri/src/models/: mod.rs
src-tauri/src/ssh/: mod.rs
src/api/: tauri.ts
src/components/: AddTunnelDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DockerExplorerPage.tsx  DownloadHistoryPanel.tsx  ErrorBoundary.tsx  FileBrowser.tsx  FileDetailPanel.tsx  LocalBrowser.tsx  NewSessionModal.tsx  PasswordPrompt.tsx  PortForwardPanel.tsx  PreviewModal.tsx  ReconnectingBanner.tsx  ResizeHandle.tsx  SessionDetailView.tsx  SessionListView.tsx  SessionLogPage.tsx  Sidebar.tsx  SshConfigImportModal.tsx  StatusBadge.tsx  StatusBar.tsx  TerminalPanel.tsx  TextPromptDialog.tsx  TitleBar.tsx  Toolbar.tsx  TransferPanel.tsx
src/hooks/: useConnection.ts  useConnectionWatchdog.ts  useDockerExplorer.ts  useDownloadHistory.ts  useElementWidth.ts  useFileOps.ts  useLocalFiles.ts  useNotifications.ts  usePing.ts  usePortForwards.ts  useProfiles.ts  useResizable.ts  useSessionLog.ts  useTabs.ts  useTransferQueue.ts
src/utils/: fileType.ts  fmtDuration.ts  oscParser.ts  relativeTime.ts
