[package]
name = "remote-vm-explorer"
version = "0.1.0"
description = "A native desktop SSH file manager"
authors = []
edition = "2021"

[lib]
name = "remote_vm_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
ssh2              = "0.9"
thiserror         = "2"
log               = "0.4"
shellexpand       = "3"
rusqlite          = { version = "0.31", features = ["bundled"] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
