[package]
name = "harborscp"
version = "0.1.0"
description = "A native SSH/SFTP desktop client for developers — built with Tauri + Rust"
authors = ["Avinash Nath <avinashnath2@gmail.com>"]
license = "MIT"
repository = "https://github.com/AvinashNath2/harbor-ssh-client"
homepage = "https://github.com/AvinashNath2/harbor-ssh-client"
keywords = ["ssh", "sftp", "tauri", "desktop"]
categories = ["network-programming", "filesystem"]
edition = "2021"

[lib]
name = "remote_vm_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
ssh2              = { version = "0.9", features = ["vendored-openssl"] }
thiserror         = "2"
log               = "0.4"
shellexpand       = "3"
rusqlite          = { version = "0.31", features = ["bundled"] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
